添加首页功能

--- a/public/index.html
+++ b/public/index.html
@@ -8,4 +8,13 @@
 <body>
     <div id="root"></div>
 </body>
+<style>
+      @font-face {
+        font-family: 'huxiao';
+        src: url('fonts/huxiao.otf') format('opentype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+        }
+</style>
 </html>
